--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,16 @@
 {
     "require": {
         "slim/slim": "4.*",
-        "slim/psr7": "^1.7"
+        "slim/psr7": "^1.7",
+        "illuminate/database": "^12.35",
+        "vlucas/phpdotenv": "^5.6",
+        "illuminate/pagination": "^12.35"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\Models\\": "http/models/",
+            "App\\Controllers\\": "http/controllers/",
+            "App\\Database\\": "http/database/"
+        }
     }
 }
